# nonebot-plugin-ts3-tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_bot.py
nonebot_plugin_ts3_tracker/: __init__.py  config.py  models.py  query.py  runtime.py  service.py  storage.py
onebot_plugin_ts3_tracker/: __init__.py  runtime.py
scripts/: verify_live.py
tests/: conftest.py  test_plugin.py  test_query.py  test_runtime.py  test_service.py  test_storage.py  utils.py
ts3_tracker_shared/: __init__.py
